INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
SET(CMAKE_Fortran_FLAGS "-O0 -DHAVE_CONFIG_H")
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/include ${PROJECT_SOURCE_DIR}/epos ${PROJECT_SOURCE_DIR}/urqmd)
SET(CORSIKA_SRC corsika.F tobuf.c timerc.c trapfpe.c)
SET(HYDRO_LINK_SRC HydroLink.F HydroRun.F HydroStore.F)
SET(TEST_SRC test.F HydroRun.F)
ADD_EXECUTABLE(CORSIKA ${CORSIKA_SRC} ${HYDRO_LINK_SRC})
ADD_EXECUTABLE(test_hydro ${TEST_SRC})
TARGET_LINK_LIBRARIES(CORSIKA EPOS_CORSIKA URQMD_CORSIKA)
INSTALL(TARGETS CORSIKA DESTINATION .)
INSTALL(TARGETS test_hydro DESTINATION .)